# The tests/ subdirectory is used for implementing tests. Each separate test
# will be in its own subdirectory under tests/.

add_subdirectory(ssm_output_test)
add_subdirectory(ssm_input_test)
add_subdirectory(gpio_output_sanity_test)
add_subdirectory(stdout_sanity_test)
add_subdirectory(pio_clk_test)
